# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.39 2009-01-22 14:55:52 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.5 (2009/??/??)
 - (2009/01/22) Fixed bug# 3596 - Renaming of the admin group.

2.3.4 (2009/01/21)
 - (2009/01/20) Fixed bug# 3447 - CustomerUser-Renaming to existing UserLogin
    was possible.
 - (2009/01/20) Fixed bug# 3603 - Different Max-Attribute handling in Layout.pm
    BuildSelection and OptionStrgHashRef.
 - (2009/01/20) Fixed bug# 3601 - Problems in function BuildSelection with
   ''-Strings and 0.
 - (2009/01/15) Fixed bug# 3595 - VacationCheck() of Kernel::System::Time is
    ignoring different OTRS calendar.
 - (2009/01/13) Fixed bug# 3542 - Static Stats lose associated perlmodule after
    editing.
 - (2009/01/10) Fixed bug# 3575 - Framework file get lost after upgrading OTRS
    and reinstalling or uninstalling e. g. ITSM pakages then.
 - (2008/12/08) Fixed bug# 3462 - SMIME crypt and sign functions bail out -
     unable to save random state.
 - (2008/12/04) Fixed bug# 3360 - Service list formating broken after AJAX reload.
 - (2008/12/02) Fixed bug# 3495 - No unbind in LDAP-CustomerDataBackend.
 - (2008/12/01) Fixed bug# 3493 - CloseParentAfterClosedChilds.pm does not work.
 - (2008/11/26) Fixed bug# 2582 - Ticket print and config option
     Ticket::Frontend::ZoomExpandSort gets not recognized.
 - (2008/11/16) Fixed bug# 3452 - "permission denied" after moving tickets into
    a queue with no permissions.
 - (2008/11/16) Fixed bug# 3461 - It's not possible to past an email into a
    note screen, only 70 signs are possible for each line, it should be
    increased to 78.
 - (2008/11/14) Fixed bug# 3459 - Ticket in state "pending" are not escalating