@@ -1,8 +1,8 @@
 # --
 # Kernel/System/Group.pm - All Groups related function should be here eventually
-# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Group.pm,v 1.58 2008-05-15 22:05:46 mh Exp $
+# $Id: Group.pm,v 1.58.2.1 2009-01-23 08:51:30 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -17,7 +17,7 @@ use warnings;
 use Kernel::System::Valid;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.58 $) [1];
+$VERSION = qw($Revision: 1.58.2.1 $) [1];
 
 =head1 NAME
 
@@ -486,9 +486,9 @@ based on GroupGroupMemberList() and GroupRoleMemberList().
     );
 
     Attention: The user ids (keys) in the hash returned from this function
-               are correct, however the values are not correspond to the user ids.
-               This does not affect the correct operation of otrs, this is just a
-               note to inform you not to use the values in this hash.
+        are correct, however the values are not correspond to the user ids.
+        This does not affect the correct operation of otrs, this is just a
+        note to inform you not to use the values in this hash.
 
 =cut
 
@@ -638,6 +638,9 @@ sub GroupMemberInvolvedList {
         $Param{$_} = $Self->{DBObject}->Quote( $Param{$_}, 'Integer' );
     }
 
+    # only allow valid system permissions as Type
+    my $TypeString = $Self->_GetTypeString(Type => $Param{Type});
+
     # get valid ids
     my $ValidID = join( ', ', $Self->{ValidObject}->ValidIDsGet() );
 
@@ -647,7 +650,7 @@ sub GroupMemberInvolvedList {
         . "WHERE g.valid_id IN ($ValidID) AND "
         . "g.id = gu.group_id AND "
         . "gu.permission_value = 1 AND "
-        . "gu.permission_key IN ('$Param{Type}', 'rw') AND "
+        . "gu.permission_key IN ( $TypeString ) AND "
         . "gu.user_id = $Param{UserID}";
     $Self->{DBObject}->Prepare( SQL => $SQL );
 
@@ -672,7 +675,7 @@ sub GroupMemberInvolvedList {
             . "WHERE g.valid_id in ($ValidID) AND "
             . " g.id = gu.group_id AND "
             . " gu.permission_value = 1 AND "
-            . "gu.permission_key IN ('$Param{Type}', 'rw') AND "
+            . "gu.permission_key IN ( $TypeString ) AND "
             . "gu.role_id IN (" . join( ',', @Roles ) . ")";
         $Self->{DBObject}->Prepare( SQL => $SQL );
         while ( my @Row = $Self->{DBObject}->FetchrowArray() ) {
@@ -688,7 +691,7 @@ sub GroupMemberInvolvedList {
             . "g.valid_id in ($ValidID) AND "
             . "g.id = gu.group_id AND "
             . "gu.permission_value = 1 AND "
-            . "gu.permission_key IN ('$Param{Type}', 'rw') AND "
+            . "gu.permission_key IN ( $TypeString ) AND "
             . "gu.group_id IN (" . join( ',', @ArrayGroups ) . ")";
         $Self->{DBObject}->Prepare( SQL => $SQL );
         while ( my @Row = $Self->{DBObject}->FetchrowArray() ) {
@@ -700,7 +703,7 @@ sub GroupMemberInvolvedList {
             . "g.valid_id in ($ValidID) AND "
             . "g.id = gu.group_id AND "
             . "gu.permission_value = 1 AND "
-            . "gu.permission_key IN ('$Param{Type}', 'rw') AND "
+            . "gu.permission_key IN ( $TypeString ) AND "
             . "gu.group_id IN (" . join( ',', @ArrayGroups ) . ")";
         $Self->{DBObject}->Prepare( SQL => $SQL );
         my @AllRoles;
@@ -812,6 +815,9 @@ sub GroupGroupMemberList {
     # db quote
     $Param{Type} = $Self->{DBObject}->Quote( $Param{Type} );
 
+    # only allow valid system permissions as Type
+    my $TypeString = $Self->_GetTypeString(Type => $Param{Type});
+
     # sql
     my %Data = ();
     my @Name = ();
@@ -822,7 +828,7 @@ sub GroupGroupMemberList {
         . " g.valid_id IN (" . join( ', ', $Self->{ValidObject}->ValidIDsGet() ) . ") AND "
         . " g.id = gu.group_id AND "
         . " gu.permission_value = 1 AND "
-        . " gu.permission_key IN ('$Param{Type}', 'rw') AND ";
+        . " gu.permission_key IN ( $TypeString ) AND ";
 
     if ( $Param{UserID} ) {
         $SQL .= 'gu.user_id = ' . $Self->{DBObject}->Quote( $Param{UserID}, 'Integer' );
@@ -979,6 +985,9 @@ sub GroupRoleMemberList {
     # db quote
     $Param{Type} = $Self->{DBObject}->Quote( $Param{Type} );
 
+    # only allow valid system permissions as Type
+    my $TypeString = $Self->_GetTypeString(Type => $Param{Type});
+
     # sql
     my %Data = ();
     my @Name = ();
@@ -989,7 +998,7 @@ sub GroupRoleMemberList {
         . " g.valid_id IN (" . join( ', ', $Self->{ValidObject}->ValidIDsGet() ) . ") AND "
         . " g.id = gu.group_id AND "
         . " gu.permission_value = 1 AND "
-        . " gu.permission_key IN ('$Param{Type}', 'rw') AND ";
+        . " gu.permission_key IN ( $TypeString ) AND ";
 
     if ( $Param{RoleID} ) {
         $SQL .= ' gu.role_id = ' . $Self->{DBObject}->Quote( $Param{RoleID}, 'Integer' );
@@ -1511,6 +1520,25 @@ sub RoleList {
     return %Roles;
 }
 
+=item _GetTypeString()
+
+returns a string for a sql IN elements which contains a comma separted list of system permissions.
+
+    my $TypeString = $GroupObject->_GetTypeString(Type => 'close');
+
+=cut
+
+sub _GetTypeString {
+    my ($Self, %Param) = @_;
+
+    # only allow valid system permissions as Type; see bug 3499
+    my @Types = grep $_ eq $Param{Type}, @{$Self->{ConfigObject}->Get('System::Permission')};
+    push @Types, 'rw';
+    my $TypeString = join ',', map "'$_'", @Types;
+
+    return $TypeString;
+}
+
 1;
 
 =back
@@ -1527,6 +1555,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 
 =head1 VERSION
 
-$Revision: 1.58 $ $Date: 2008-05-15 22:05:46 $
+$Revision: 1.58.2.1 $ $Date: 2009-01-23 08:51:30 $
 
 =cut
